move overflow fix from arstech scrollbar to google fixes

--- a/google-smallfonts-lesspadding.css
+++ b/google-smallfonts-lesspadding.css
@@ -12,3 +12,9 @@
     line-height: 25px;
 }
 }
+
+@-moz-document regexp("https?:\\/\\/www.google\\..*\\/"), regexp("https?:\\/\\/www.google\\..*\\/webhp.*"), regexp("https?:\\/\\/google\\..*\\/"), regexp("https?:\\/\\/google\\..*\\/webhp.*"), regexp("https?:\\/\\/images.google\\..*\\/"), regexp("https?:\\/\\/images.google\\..*\\/imghp.*"), regexp("https?:\\/\\/www.google\\..*\\/imghp.*"), regexp("https?:\\/\\/google\\..*\\/imghp") {
+body {
+    overflow-y: hidden;
+}
+}
